SCOUT-61 Workflow scale part 1 (#42)
* Refactor hl7 workflow to spawn a child workflow for each date that does the log finding, splitting, and transforming

* Move getSuccessfulResults to utils class

* Heavily refactor workflow around taking log paths as input, which can be directories

* Tweak input handling to accept a logsRootPath without any logPaths, will recursively read everything in logsRootPath

* Update CI script that runs hl7 ingest workflow to pass in log path; will run on all files under that dir

* Pass HL7 file paths to python activity through scratch space temp files

* Fix hl7 file paths file path

* Fix for reading file paths from files

* Encode hl7 files as UTF-8

* Preload spark jars into python worker image

* Hard-code lots of memory for the spark executor (temporary)

* Add logging to java worker around finding log files

* Restrict log finding activity to files ending in .log

* Download smolder jar into python worker

* Wait for child workflow results with Promise.allOf

* Propagate kubeconfig into ansible steps

* Set much longer timeout for splitting and transforming logs

* Use custom Promise implementation to wait for successful async activities and child workflows

* Rewrite python activity to do everything with spark

* Revert custom promise; just use the standard one and accept the failures for now

* Set the split log activity timeout low again

* Lower FileHandler logging to debug

* Revert "Revert custom promise; just use the standard one and accept the failures for now"

This reverts commit 3a1d700fd024a957b4c854818a130f64749642a7.

* Replace s3:// with s3a:// in all paths sent to spark

* Use atomic integer in custom promise (even though I'm not sure if this jibes with temporal's stuff)

* Check if all child workflows failed, then fail parent workflow

* Only download smolder, not other jars

* Download python dependencies before installing source, for better image build caching

* Switch from entrypoint to cmd because the imag